--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
-# The individual contributed to the air_bnb project in this repository
+# This file lists all individuals having contributed content to the repository.
 
-Zakariyah Ali <zakariyahali100@gmail.com>
+
+Jennifer Huang <133@holbertonschool.com>
+Alexa Orrico <210@holbertonschool.com>
+Joann Vuong <130@holbertonschool.com> 
